src/tests/testfiles/binary-operators/5.txt
testfiles/binary-operators/5.c:2:9: error: invalid operands to comparison '<=' (have 'char *' and 'float')
"1" <= 2.0;
    ^
